package lld.parkinglot;

public enum PaymentStatus {
    SUCCESS, FAILED, PENDING
}
