package lld.parkinglot;

public enum SpotType {
    MOTORCYCLE, COMPACT, LARGE
}
