package lld.parkinglot;

public enum VehicleType {
    BIKE, CAR, TRUCK
}
