@startuml
enum lld.parkinglot.VehicleType {
+  MOTORCYCLE
+  COMPACT
+  LARGE
}

class lld.parkinglot.Payment {
- String paymentId
- Ticket ticket
- Double amount
- PaymentStatus paymentStatus
- LocalDateTime paymentTime
+ String getPaymentId()
+ Ticket getTicket()
+ Double getAmount()
+ PaymentStatus getPaymentStatus()
+ LocalDateTime getPaymentTime()
+ void markAsSuccess()
}


enum lld.parkinglot.SpotType {
+  MOTORCYCLE
+  COMPACT
+  LARGE
}

enum lld.parkinglot.PaymentStatus {
+  SUCCESS
+  FAILED
+  PENDING
}

class lld.parkinglot.Ticket {
- String ticketId
- Vehicle vehicle
- ParkingSpot parkingSpot
- LocalDateTime entryTime
+ String getTicketId()
+ Vehicle getVehicle()
+ ParkingSpot getParkingSpot()
+ LocalDateTime getEntryTime()
}


class lld.parkinglot.ParkingFeeCalculator {
+ double calculateFee(Ticket,LocalDateTime)
}

class lld.parkinglot.ParkingSpot {
- int spotNumber
- SpotType spotType
- Vehicle currentVehicle
+ int getSpotNumber()
+ SpotType getSpotType()
+ boolean isAvailable()
+ boolean canPark(Vehicle)
+ void park(Vehicle)
+ Vehicle unpark()
}


class lld.parkinglot.ParkingLot {
- List<Floor> floors
- Map<String,Ticket> activeTickets
~ ParkingFeeCalculator parkingFeeCalculator
+ Ticket parkVehicle(Vehicle)
+ double exitVehicle(String,LocalDateTime)
+ void findAvailableSpots()
}


class lld.parkinglot.Floor {
- int floorNumber
- List<ParkingSpot> parkingSpots
+ int getFloorNumber()
+ List<ParkingSpot> getParkingSpots()
+ ParkingSpot findAvailableSpot(Vehicle)
}


class lld.parkinglot.Vehicle {
- String licensePlate
- VehicleType vehicleType
+ String getLicensePlate()
+ VehicleType getVehicleType()
}

'Arrows Relationships
skinparam nodesep 60;
skinparam nodesep 80;
skinparam shadowing false;
skinparam monochrome true;
skinparam classAttributeIconSize 0

'Strong composition
ParkingLot "1" *-- "many" Floor : contains
Floor "1" *-- "many" ParkingSpot : contains

'Association
ParkingSpot "0..1" --> "0..1" Vehicle : holds

'Ticket association
Ticket --> Vehicle : for
Ticket --> ParkingSpot : issued for
Ticket --> Payment : generates

'ParkingLot uses other components
ParkingLot --> ParkingFeeCalculator : uses
ParkingLot --> Ticket : manages

'Enum usages
ParkingSpot --> SpotType : uses
Vehicle --> VehicleType : uses
Payment --> PaymentStatus : uses


@enduml